<resources>
    <string name="app_name">CampusRider_Customer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="grocery_delivery">Grocery Delivery</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="my_order">My Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="User_Name">Username</string>
    <string name="user_phone">User Phone</string>
    <string name="title_activity_grocery_main">GroceryMainActivity</string>
    <string name="plus">+</string>
    <string name="profile">Profile</string>
    <string name="process_checkout">Process Checkout</string>
    <string name="vendor_id">vendor_id</string>
    <string name="shopping_list">Shopping List</string>
    <string name="cart_list">Cart List</string>
    <string name="pantry_list">Pantry LIst</string>
    <string name="help_center">Help Center</string>
    <string name="complain">Complain</string>
    <string name="query">Query</string>
    <string name="user_address">User Address</string>
</resources>